post image add max-width:100% to fix overflow

--- a/static/style.css
+++ b/static/style.css
@@ -597,7 +597,9 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 	padding-top: 20em;
 	background: url(images/404.png) no-repeat center 0;
 }
-
+.lotus-post img{
+  max-width: 100%;
+}
 .lotus-post img:hover {
     cursor: pointer;
 }
